<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.CustomersProfileActivity"
    android:background="@color/yellow"
    >

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbar_layout"
        />

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:theme="@style/ToolBarStyle"
        android:background="@color/clean"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>-->

    <ImageView
        android:visibility="gone"
        android:id="@+id/settingsIvId"
        android:padding="@dimen/_14sdp"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="settingsBtnCustomers"
        android:src="@drawable/edit_icon" />

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_below="@+id/settingsIvId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearId1Customer"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_customers"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:src="@drawable/profile_pic"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            />

        <TextView
            android:id="@+id/nameTvCustomers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/phoneNbTvCustomers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/addressTvCustomers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            />



    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goToMapCustomerBtnId"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearId1Customer"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_centerInParent="true"
        android:onClick="startMap"
        android:text="@string/go_to_map"
        android:background="@drawable/btn_round"
        android:textColor="#FFFFFF" />


</RelativeLayout>